@@ -57,15 +57,36 @@ catFileHandle = do
 {- From the Sha or Ref of a symlink back to the key. -}
 catKey :: Ref -> Annex (Maybe Key)
 catKey ref = do
-	l <- fromInternalGitPath . encodeW8 . L.unpack  <$> catObject ref
+	l <- fromInternalGitPath . encodeW8 . L.unpack <$> catObject ref
 	return $ if isLinkToAnnex l
 		then fileKey $ takeFileName l
 		else Nothing
 
-{- From a file in git back to the key.
+{- From a file in the repository back to the key.
  -
  - Prefixing the file with ./ makes this work even if in a subdirectory
  - of a repo.
+ -
+ - Ideally, this should reflect the key that's staged in the index,
+ - not the key that's committed to HEAD. Unfortunately, git cat-file
+ - does not refresh the index file after it's started up, so things
+ - newly staged in the index won't show up. It does, however, notice
+ - when branches change.
+ -
+ - For command-line git-annex use, that doesn't matter. It's perfectly
+ - reasonable for things staged in the index after the currently running
+ - git-annex process to not be noticed by it.
+ -
+ - For the assistant, this is much more of a problem, since it commits
+ - files and then needs to be able to immediately look up their keys.
+ - OTOH, the assistant doesn't keep changes staged in the index for very
+ - long at all before committing them -- and it won't look at the keys
+ - of files until after committing them.
+ -
+ - So, this gets info from the index, unless running as a daemon.
  -}
 catKeyFile :: FilePath -> Annex (Maybe Key)
-catKeyFile f = catKey $ Ref $ ":./" ++ f
+catKeyFile f = ifM (Annex.getState Annex.daemon)
+	( catKey $ Ref $ "HEAD:./" ++ f
+	, catKey $ Ref $ ":./" ++ f
+	)
